MP2-2279 procurements fixes - y overflow, validation messages, error on duplicate contract ID, required fields

--- a/jems-ui/src/app/project/project-application/report/partner-report-detail-page/partner-report-procurements-tab/partner-report-procurements-tab.component.scss
+++ b/jems-ui/src/app/project/project-application/report/partner-report-detail-page/partner-report-procurements-tab/partner-report-procurements-tab.component.scss
@@ -3,6 +3,7 @@ table {
 }
 
 .table-container {
+  padding-top: 1rem;
   overflow-x: auto !important;
   overflow-y: hidden;
 }
